--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-flask
-requests
-python-dotenv
+flask==3.0.2
+python-dotenv==1.0.1
+requests==2.32.3
+pandas==2.1.4
+numpy==1.26.4
+scikit-learn==1.3.2
