--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask==3.0.2
-python-dotenv==1.0.1
-requests==2.32.3
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.3.2
+Flask==2.3.3
+python-dotenv==1.0.0
+requests==2.31.0
+pandas==2.0.3
+scikit-learn==1.3.0
+numpy==1.24.3
