--- a/.env
+++ b/.env
@@ -1,25 +1,22 @@
-# ============================================================
-# 🌤️ KONFIGURASI APLIKASI WISATA BALI (.env)
-# ============================================================
+# KONFIGURASI APLIKASI WISATA BALI (.env)
 
-# === [1] API KEY OPENWEATHER ===
+# 1. API KEY OPENWEATHER
 OPENWEATHER_API_KEY=aef2fdd2aa915a9a7a7a7e3835c66468
 
-# === [2] KONFIGURASI DASAR ===
+# 2. KONFIGURASI DASAR
 DEFAULT_PLACE=Bali
 
-# === [3] LABEL KELUARAN MODEL ML ===
+# 3. LABEL KELUARAN MODEL ML
 ML_LABEL_NAMES=pantai,hiking,snorkeling,rafting
 
-# === [4] OPSIONAL: PARAMETER TAMBAHAN ===
+# 4. PARAMETER TAMBAHAN
 OW_LANG=id
 OW_UNITS=metric
 SUN_MODE=effective
 
-# === [5] OPSIONAL: PATH MODEL ML ===
-# Jika path kamu masih lokal Windows, biarkan seperti di bawah ini.
-ML_MODEL_PATH=C:\Users\LENOVO\Downloads\wisatabali_flask_v3_1 (2) (1)\wisatabali_flask_v3_1\multi_rf_model.pkl
+# 5. PATH MODEL ML
+ML_MODEL_PATH= "multi_rf_model.pkl"
 
-# === [6] MODE APLIKASI ===
+# 6. MODE APLIKASI
 FLASK_ENV=development
 DEBUG=True
