--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ OW_UNITS=metric
 SUN_MODE=effective
 
 # 5. PATH MODEL ML
-ML_MODEL_PATH= "multi_rf_model.pkl"
+ML_MODEL_PATH= "model_random_forest.pkl"
 
 # 6. MODE APLIKASI
 FLASK_ENV=development
